--- a/Shaders/Shaders.vcxproj
+++ b/Shaders/Shaders.vcxproj
@@ -146,18 +146,22 @@
     <ClCompile Include="Shaders.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="MapViewer.fs">
+    <CopyFileToFolders Include="MapViewer.fs">
       <DeploymentContent>true</DeploymentContent>
-    </None>
-    <None Include="MapViewer.vs">
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="MapViewer.vs">
       <DeploymentContent>true</DeploymentContent>
-    </None>
-    <None Include="Mesh.fs">
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="Mesh.fs">
       <DeploymentContent>true</DeploymentContent>
-    </None>
-    <None Include="Mesh.vs">
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="Mesh.vs">
       <DeploymentContent>true</DeploymentContent>
-    </None>
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
