--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -163,7 +163,7 @@
     <ClCompile Include="Tasks\OpenVslamTask.cpp" />
     <ClCompile Include="Tasks\TaskWorker.cpp" />
     <ClCompile Include="Tasks\Viso2Task.cpp" />
-    <ClCompile Include="Views\LayoutManager.cpp" />
+    <ClCompile Include="Views\ViewManager.cpp" />
     <ClCompile Include="Views\MapViewer.cpp" />
     <ClCompile Include="Views\NodeEditor\NodeEditor.cpp" />
     <ClCompile Include="Views\Outliner.cpp" />
@@ -190,7 +190,7 @@
     <ClInclude Include="Tasks\Viso2Task.h" />
     <ClInclude Include="Utils.hpp" />
     <ClInclude Include="Views\IView.hpp" />
-    <ClInclude Include="Views\LayoutManager.h" />
+    <ClInclude Include="Views\ViewManager.h" />
     <ClInclude Include="Views\MapViewer.h" />
     <ClInclude Include="Views\NodeEditor\NodeEditor.h" />
     <ClInclude Include="Views\Outliner.h" />
